--- a/src/sections/Skills/SkillsStyles.module.css
+++ b/src/sections/Skills/SkillsStyles.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   text-align: center;
   padding: 20px;
+  margin-bottom: 60px;
 
   /* Style for span elements inside container */
   span {
